# pyjs-code-runner

./: LICENSE  MANIFEST.in  README.md  dev-env-pip.yml  dev-env.yml  pyproject.toml  setup.py
.github/workflows/: check-release.yml  main.yaml  publish-release.yml
pyjs_code_runner/: constants.py  get_cache_dir.py  get_file_filter.py  js_global_object.py  run.py  work_dir_context.py
pyjs_code_runner/backend/: backend.py  backend_base.py
pyjs_code_runner/backend/browser_main/: browser_main.py  server.py
pyjs_code_runner/backend/browser_worker/: browser_worker.py
pyjs_code_runner/backend/node/: node.py  node_main.js
pyjs_code_runner/cli/: main.py  run.py  utils.py
pyjs_code_runner/html/: browser_worker.html
pyjs_code_runner/js/: utils.js  worker.js
test/: conftest.py  test_cli.py  test_python_api.py
