[build-system]
requires = [
    "hatchling",
]
build-backend = "hatchling.build"

[project]
name = "pyjs-code-runner"
description = "A driver to run wasm code from an emscripten-forge coda env like normal python code"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "Thorsten Beier", email = "derthorstenbeier@gmail.com" },
]
keywords = [
    "pyjs_code_runner",
]
classifiers = [
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "appdirs",
    "empack >=3.0.0",
    "playwright",
    "rich",
    "typer",
]
dynamic = ["version"]

[tool.hatch.version]
path = "pyjs_code_runner/version.py"

[project.scripts]
pyjs_code_runner = "pyjs_code_runner.cli.main:app"

[project.urls]
Homepage = "https://github.com/emscripten-forge/pyjs-code-runner"

[tool.hatch.build.targets.sdist]
exclude = [
    ".github",
]
